Tue Apr 19 15:11:19 CEST 2005 (acab)
  * libclamav/pe.c: Fixed a typo in FSG detection
                  (reported by Didi Rieder <adrieder*sbox.tugraz.at>)

Tue Apr 19 12:30:58 BST 2005 (trog)
-----------------------------------
  * libclamav/unrar: Add copyright notice. Fix metadata ref bug.

Tue Apr 19 10:22:26 BST 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Some Sober.N were getting through, thanks to Christoph
				for pointing this out

Tue Apr 19 01:26:56 CEST 2005 (tk)
----------------------------------
  * libclamav/unrarlib.[ch]: removed

Mon Apr 18 11:55:48 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Fixed a multi-threading problem relating to updating
				the database when in internal mode
			Use HAVE_CTIME_R_[23]

Thu Apr 14 19:39:49 BST 2005 (trog)
-----------------------------------
  * libclamav/scanners.c, libclamav/vba_extract.[ch]:
	Decode and scan OLE objects embedded in MS Office documents.

Thu Apr 14 14:35:37 BST 2005 (trog)
-----------------------------------
  * libclamav/scanners.c: Activate new RAR code.

  * libclamav/unrar.c, unrar.h, unrarvm.h: update code for activation

  * libclamav/Makefile.am, Makefile.in: compile in new RAR code
 
Thu Apr 14 14:11:31 CEST 2005 (tk)
----------------------------------
  * freshclam/manager.c: pass proper argument to OnErrorExecute (patch by
			 Alexandre Biancalana <ale*seudns.net>)

Thu Apr 14 14:04:46 CEST 2005 (tk)
----------------------------------
  * configure: check for ctime_r

Tue Apr 12 09:54:58 BST 2005 (trog)
-----------------------------------
  * libclamav/unrar: First commit of RAR3, RAR2 and RAR1 code.
		Not yet activated.

Thu Apr  7 20:00:23 CEST 2005 (tk)
----------------------------------
  V 0.84rc1

Thu Apr  7 19:41:09 CEST 2005 (tk)
----------------------------------
  * docs: update

Thu Apr  7 17:38:53 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Added installation notes about Solaris 10